--- a/angular.json
+++ b/angular.json
@@ -12,6 +12,9 @@
       "schematics": {},
       "architect": {
         "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "www",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
